/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package csd214.bookstore.pojos;

/**
 *
 * @author fcarella
 */
public interface SaleableItem {
    public void sellCopy();
    public double getPrice();
}
